--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.2.1
 attrs==22.1.0
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+Brotli==1.0.9
 decorator==5.1.1
 dj-database-url==1.2.0
 Django==4.0.7
@@ -24,7 +25,8 @@ packaging==22.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-pkgutil-resolve-name==1.3.10
+pkg_resources==0.0.0
+pkgutil_resolve_name==1.3.10
 pluggy==1.0.0
 prompt-toolkit==3.0.36
 psycopg2-binary==2.9.5
